--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.8",
+    "@tanstack/react-query": "^5.54.1",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1"
