--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.19.1",
     "@tailwindcss/forms": "^0.5.8",
     "@tanstack/react-query": "^5.54.1",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
